--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <header>
   <div class="container">
 
-    <img src="icons/header logo.svg" alt="logo">
+    <img id="bigLogo" src="icons/header logo.svg" alt="logo">
     <nav>
       <img class="listBtn" src="icons/list.svg" alt="">
       <img class="cancelBtn" src="icons/cancel.svg" alt="">
       <ul>
-        <li class="active">home</li>
-        <li>about us</li>
-        <li>our services</li>
-        <li>import & export</li>
-        <li>contact us</li>
+        <li id="homeBtn" class="active">home</li>
+        <li id="aboutUsBtn">about us</li>
+        <li id="servicesBtn">our services</li>
+        <li id="iAndEBtn">import & export</li>
+        <li id="contactBtn">contact us</li>
       </ul>
     </nav>
   </div>
@@ -31,15 +31,15 @@
   <div class="container">
     <div id="google_translate_element"></div>
     <div class="phone-email">
-      <a target="_blank" href="https://wa.me/8886060299"><img src="icons/whatsapp.svg" alt="whatsapp"> +918886060299</a>
-      <a target="_blank" href=""><img src="icons/email.svg" alt="email"> global.onorva@gmail.com</a>
+      <a target="_blank" href="https://wa.me/+918886060299"><img src="icons/whatsapp.svg" alt="whatsapp"> +918886060299</a>
+      <a target="_blank" href="mailto:norova@gmail.com"><img src="icons/email.svg" alt="email"> global.onorva@gmail.com</a>
     </div>
   </div>
 </div>
 
 <!-- ------------------------ section -1 -->
 
-<div class="section-1">
+<div id="section-1" class="section-1">
   <div class="container">
     <section class="info">
       <img src="icons/en&ar-logo.svg" alt="logo">
@@ -49,7 +49,7 @@
 </div>
 <!-- ----------------section-2 -->
 
-<div class="section-2">
+<div id="section-2" class="section-2">
   <div class="container">
     <h1 class="big-title">about us</h1>
     <img src="icons/en&ar-logo blue.svg" alt="logo">
@@ -59,7 +59,7 @@
 </div>
 
 <!-- -------------- section-3  -->
-<div class="section-3">
+<div id="section-3" class="section-3">
   <div class="container">
     <h1 class="big-title">our services</h1>
     <section class="services">
@@ -103,10 +103,10 @@
     </section>
   </div>
   </div>
-</div>
+
 
 <!-- ------------ section-4 -->
-<div class="section-4">
+<div id="section-4" class="section-4">
   <div class="container">
     <h1 class="big-title">what we import<br> and export</h1>
     <section class="products">
@@ -166,7 +166,7 @@
 
 
 <!-- ------------ section-5 -->
-<div class="section-5">
+<div id="section-5" class="section-5">
   <div class="container">
     <h1 class="big-title">contact us</h1>
     <section>
@@ -185,14 +185,13 @@
 <!-- ----------- footer  -->
 <footer>
   <div class="container">
-
     <div class="icons">
       <img src="icons/en&ar-logo.svg" alt="logo">
       <div class="s-m">
         <a href="https://www.facebook.com/profile.php?id=100079244114319" target="_black"><img src="icons/facebook.svg" alt="facebook"></a>
         <a href="https://instagram.com/onorva.global?utm_medium=copy_link" target="_black"><img src="icons/instagram.svg" alt="instagram"></a>
-        <a href="https://wa.me/8886060299" target="_black"><img src="icons/whatsapp.svg" alt="whatsapp"></a>
-        <a href="global.onorva@gmail.com" type="email" target="_black"><img src="icons/email.svg" alt="email"></a>
+        <a href="https://wa.me/+918886060299" target="_black"><img src="icons/whatsapp.svg" alt="whatsapp"></a>
+        <a href="mailto:global.onorva@gmail.com" type="email" target="_black"><img src="icons/email.svg" alt="email"></a>
       </div>
     </div>
   </div>
