add description to the web page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Import & Export of various goods and commodities from Factory Equipment, Medical Equipment, Medicines, Cloths to wide varieties of food; ranging from wheat, frozen meat & chicken, Indian spices and many more. Our main office is located in India and our other branches are located in Brasil, Turkey and China. ">
+  <meta name="keywords" content="import, export ,ship, container">
+  <meta name="author" content="Emad Rashad"> 
   <link rel="stylesheet" href="style/cssFiles/main.css">
   <link rel="icon" href="./icons/small logo.svg">
   <title>ONORVA</title>
@@ -117,7 +120,7 @@
       </div>
       <div class="product">
         <img src="img/4-B.jpg" alt="Wide range of Indian and Pakistani Rices">
-        <i>all kind of Indian and Pakistani Rices</i>
+        <i>all kinds of Indian and Pakistani Rices</i>
       </div>
       <div class="product">
         <img src="img/4-C.jpg" alt="High-quality of Fabrics and Cloths">
