change the pdf file

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h1 class="big-title">about us</h1>
     <img src="icons/en&ar-logo blue.svg" alt="logo">
     <p>Import & Export of various goods and commodities from Factory Equipment, Medical Equipment, Medicines, Cloths to wide varieties of food; ranging from wheat, frozen meat & chicken, Indian spices and many more. Our main office is located in India and our other branches are located in Brasil, Turkey and China. </p>
-    <a href="./onorva-pdf-6.pdf" download="">download pdf </a>
+    <a href="./pdf compressed.pdf" download="">download pdf </a>
   </div>
 </div>
 
