change the description of the page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Import & Export of various goods and commodities from Factory Equipment, Medical Equipment, Medicines, Cloths to wide varieties of food; ranging from wheat, frozen meat & chicken, Indian spices and many more. Our main office is located in India and our other branches are located in Brasil, Turkey and China. ">
+  <meta name="description" content="Import & Export of commodities from Factory Equipment, Medical Equipment, Medicines, Clothes,
+  etc... | استيراد وتصدير السلع من معدات المصانع ، المعدات الطبية ، الأدوية ، الملابس ،
+  إلخ...">
   <meta name="keywords" content="import, export ,ship, container">
   <meta name="author" content="Emad Rashad"> 
   <link rel="stylesheet" href="style/cssFiles/main.css">
   <link rel="icon" href="./icons/small logo.svg">
-  <title>ONORVA</title>
+  <title>ONORVA - اونورفا</title>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@200;400;500;800;900&family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
