update the page

--- a/index.html
+++ b/index.html
@@ -12,200 +12,289 @@
   <link rel="stylesheet" href="style/cssFiles/main.css">
   <link rel="icon" href="./icons/small logo.svg">
   <title>ONORVA - اونورفا</title>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@200;400;500;800;900&family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
 <header>
-  <div class="container">
-
-    <img id="bigLogo" src="icons/header logo.svg" alt="logo">
-    <nav>
-      <img class="listBtn" src="icons/list.svg" alt="">
-      <img class="cancelBtn" src="icons/cancel.svg" alt="">
-      <ul>
-        <li id="homeBtn" class="active">home</li>
-        <li id="aboutUsBtn">about us</li>
-        <li id="servicesBtn">our services</li>
-        <li id="iAndEBtn">import & export</li>
-        <li id="contactBtn">contact us</li>
-      </ul>
-    </nav>
-  </div>
-</header> 
-<div class="change-language">
-  <div class="container">
-    <div id="google_translate_element"></div>
-    <div class="phone-email">
-      <a target="_blank" href="https://wa.me/+918886060299"><img src="icons/whatsapp.svg" alt="whatsapp"> +918886060299</a>
-      <a target="_blank" href="mailto:norova@gmail.com"><img src="icons/email.svg" alt="email"> global.onorva@gmail.com</a>
+  <img id="logo" src="icons/header logo.svg" alt="logo">
+  <img id="menuBtn" src="icons/list.svg" alt="menu">
+  <img id="cancelBtn" src="icons/cancel.svg" alt="cancel">
+  <!-- google translate ----------  -->
+  <div id="google_translate_element"></div>
+</header>
+<nav>
+  <ul>
+    <img class="nav-logo" src="icons/en&ar-logo.svg" alt="logo">
+    <li id="home">Home</li>
+    <li id="aboutUs">about us</li>
+    <li id="ourServices">our services</li>
+    <li id="image_gallery">image gallery</li>
+    <li id="import_export">import & export</li>
+    <li id="orderNow">order now</li>
+    <div class="s-m">
+      <a target="_black" href="https://www.facebook.com/profile.php?id=100079244114319"><img src="icons/facebook.svg" alt=""></a>
+      <a target="_black" href="https://instagram.com/onorva.global?utm_medium=copy_link"><img src="icons/instagram.svg" alt=""></a>
+      <a target="_black" href="https://wa.me/+918886060299"><img src="icons/whatsapp.svg" alt=""></a>
+      <a target="_black" href="mailto:global.onorva@gmail.com"><img src="icons/email.svg" alt=""></a>
     </div>
-  </div>
-</div>
-
-<!-- ------------------------ section -1 -->
-
-<div id="section-1" class="section-1">
-  <div class="container">
-    <section class="info">
-      <img src="icons/en&ar-logo.svg" alt="logo">
-      <p>import and export to Yemen, all Gulf countries and east africa </p>
-    </section>
-  </div>
-</div>
-<!-- ----------------section-2 -->
-
-<div id="section-2" class="section-2">
-  <div class="container">
-    <h1 class="big-title">about us</h1>
-    <img src="icons/en&ar-logo blue.svg" alt="logo">
-    <p>Import & Export of various goods and commodities from Factory Equipment, Medical Equipment, Medicines, Cloths to wide varieties of food; ranging from wheat, frozen meat & chicken, Indian spices and many more. Our main office is located in India and our other branches are located in Brasil, Turkey and China. </p>
-    <a href="./pdf compressed.pdf" download="">download pdf </a>
-  </div>
-</div>
-
-<!-- -------------- section-3  -->
-<div id="section-3" class="section-3">
-  <div class="container">
-    <h1 class="big-title">our services</h1>
-    <section class="services">
-      <div class="service">
-        <img src="icons/import -export icon.svg" alt="import and export ">
-        <h4>import and export </h4>
-      </div>
-      <div class="service">
-        <img src="icons/interantional shipping.svg" alt="International Shipment ">
-        <h4>International Shipment</h4>
-      
-      </div>
-      <div class="service">
-        <img src="icons/medical.svg" alt="medical distribution letter ">
-        <h4>medical distribution letter</h4>
-      </div>
-      <div class="service">
-        <img src="icons/shipment of medical eq.svg" alt="shipment of medical">
-        <h4>shipment of medical equipment</h4>
-      </div>
-      <div class="service">
-        <img src="icons/shipment of factory eq.svg" alt="shipment of Factory">
-        <h4>shipment of Factory Equipment</h4>
-      </div>
-      <div class="service">
-        <img src="icons/goods.svg" alt="shipment of commodities ">
-        <h4>shipment of commodities </h4>
-      </div>
-      <div class="service">
-        <img src="icons/goable import and exoport.svg" alt="global import and export">
-        <h4>global import and export</h4>
-      </div>
-      <div class="service">
-        <img src="icons/air and sea shipment.svg" alt="shipment over air or sea">
-        <h4>shipment over air or sea</h4>
-      </div>
-      <div class="service">
-        <img src="icons/fast shipment.svg" alt="express or standard shipping">
-        <h4>express or normal shipping</h4>
-      </div>
-    </section>
-  </div>
-  </div>
+  </ul>
+</nav>
 
 
-<!-- ------------ section-4 -->
-<div id="section-4" class="section-4">
-  <div class="container">
-    <h1 class="big-title">what we import<br> and export</h1>
-    <section class="products">
-      <div class="product">
-        <img src="img/4-A.jpg" alt="Premium-quality of Indian Spices">
-        <i>Premium-quality of Indian Spices</i>
-        <!-- <div class="div-border"></div> -->
-      </div>
-      <div class="product">
-        <img src="img/4-B.jpg" alt="Wide range of Indian and Pakistani Rices">
-        <i>all kinds of Indian and Pakistani Rices</i>
-      </div>
-      <div class="product">
-        <img src="img/4-C.jpg" alt="High-quality of Fabrics and Cloths">
-        <i>High-quality of fabrics and clothes</i>
-      </div>
-      <div class="product">
-        <img src="img/4-D.jpg" alt="Multitude types of Shoes from India and Turkey">
-        <i>Multitude types of Shoes from India and Turkey</i>
-      </div>
-      <div class="product">
-        <img src="img/4-E.jpg" alt="Timbers">
-        <i>Import & Export of Timbers from India, China, and Turkey</i>
-      </div>
-      <div class="product">
-        <img src="img/4-F.jpg" alt="Import of high-grade Steel from China and India">
-        <i>Import of high-grade iron from China and India</i>
-      </div>
-      <div class="product">
-        <img src="img/4-G.jpeg" alt="Classy, original and various types of Perfumes">
-        <i>original Oud and various types of Perfumes </i>
-      </div>
-      <div class="product">
-        <img src="img/4-H.jpg" alt="Import of all types of Medical Equipment">
-        <i>Import of all types of Medical Equipment</i>
-      </div>
-
-      <div class="product">
-        <img src="img/4-I.png" alt="Import & Export of various Construction Materials">
-        <i>Import & Export of various Construction Materials</i>
-      </div>
-      <div class="product">
-        <img src="img/4-J.jpg" alt="Import of fine-quality Brazilian Sugar">
-        <i>Import of fine-quality Brazilian Sugar</i>
-      </div>
-      <div class="product">
-        <img src="img/4-K.jpg" alt="Import & Export of top-quality Brazilian Corn">
-        <i>Import & Export of top-quality Brazilian Corn and Wheat</i>
-      </div>
-      <div class="product">
-        <img src="img/4-L.jpg" alt="Import & Export of Frozen Chicken from Brazil">
-        <i>Import & Export of Frozen Chicken from Brazil</i>
-      </div>
-    </section>
-  </div>
-</div>
-
-
-<!-- ------------ section-5 -->
-<div id="section-5" class="section-5">
-  <div class="container">
-    <h1 class="big-title">contact us</h1>
-    <section>
-    <form action="https://formsubmit.co/global.onorva@gmail.com" method="POST">
-      <input name="name" type="text" placeholder="your name">
-      <input name="email" type="email" placeholder="your email">
-      <input name="subject" type="text" placeholder="subject">
-      <textarea name="massage" placeholder="message"></textarea>
-      <button type="submit">send now</button>
-    </form>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d243624.2451906486!2d78.33456258706757!3d17.42966129453152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb99daeaebd2c7%3A0xae93b78392bafbc2!2sHyderabad%2C%20Telangana!5e0!3m2!1sen!2sin!4v1647494935440!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<!-- section-1------------- -->
+<div class="section-1" id="section_1">
+  <video src="img/My Video1.mp4" autoplay muted loop></video>
+  <section>
+    <img src="icons/en&ar-logo.svg" alt="logo">
+    <h1>import and export to Yemen, <br> all Gulf countries and east Africa</h1>
   </section>
+</div>
+
+
+  <!-- section-2------ -->
+  <div class="section-2" id="section_2">
+    <h1 class="big-title">about us</h1>
+    <section>
+      <img src="img/ship.png" alt="track">
+      <article>
+        <p>Import & Export of various goods and commodities from Factory Equipment, Medical Equipment, Medicines, Cloths to wide varieties of food ranging from wheat, frozen chicken, Indian spices and many more. Our branches are located in Brasil, Turkey, India and China. </p>
+        <a href="./pdf compressed.pdf"> <button>download PDF</button></a>
+      </article>
+    </section>
+  </div>
+
+
+  <!-- section -------------  -->
+  <div class="section-3" id="section_3">
+    <h1 class="big-title">our services</h1>
+    <div class="services">
+        <div class="service">
+          <img src="icons/import -export icon.svg" alt="import -export icon">
+          <h2>import and export </h2>
+        </div>
+        <div class="service">
+          <img src="icons/interantional shipping.svg" alt="International Shipment">
+          <h2>International Shipment</h2>
+        </div>
+        <div class="service">
+          <img src="icons/medical.svg" alt="Acquiring Partnerships from Pharmaceutical Companies">
+          <h2>Acquiring Partnerships from Pharmaceutical Companies</h2>
+        </div>
+        <div class="service">
+          <img src="icons/shipment of medical eq.svg" alt="shipment of medical equipment">
+          <h2>shipment of medical equipment</h2>
+        </div>
+        <div class="service">
+          <img src="icons/shipment of factory eq.svg" alt="shipment of Factory Equipment">
+          <h2>shipment of Factory Equipment</h2>
+        </div>
+        <div class="service">
+          <img src="icons/goods.svg" alt="shipment of commodities">
+          <h2>shipment of commodities</h2>
+        </div>
+        <div class="service">
+          <img src="icons/goable import and exoport.svg" alt="global import and export">
+          <h2>global import and export</h2>
+        </div>
+        <div class="service">
+          <img src="icons/air and sea shipment.svg" alt="shipment over air or sea">
+          <h2>shipment over air or sea</h2>
+        </div>
+        <div class="service">
+          <img src="icons/fast shipment.svg" alt="express or normal shipping">
+          <h2>express or normal shipping</h2>
+        </div>  
+    </div>
+  </div>
+
+
+<!-- section-4------------ -->
+<div class="section-4" id="section_4">
+  <div class="container">
+    <img src="img/g-1.jpg" alt="img">
+    <img src="img/g-2.jpg" alt="img">
+    <img src="img/g-3.jpg" alt="img">
+    <img src="img/g-4.jpg" alt="img">
+    <img src="img/g-5.jpg" alt="img">
+    <img src="img/g-6.jpg" alt="img">
   </div>
 </div>
 
-<!-- ----------- footer  -->
-<footer>
-  <div class="container">
-    <div class="icons">
-      <img src="icons/en&ar-logo.svg" alt="logo">
-      <div class="s-m">
-        <a href="https://www.facebook.com/profile.php?id=100079244114319" target="_black"><img src="icons/facebook.svg" alt="facebook"></a>
-        <a href="https://instagram.com/onorva.global?utm_medium=copy_link" target="_black"><img src="icons/instagram.svg" alt="instagram"></a>
-        <a href="https://wa.me/+918886060299" target="_black"><img src="icons/whatsapp.svg" alt="whatsapp"></a>
-        <a href="mailto:global.onorva@gmail.com" type="email" target="_black"><img src="icons/email.svg" alt="email"></a>
+<!-- section -5 -------------  -->
+<div class="section-5" id="section_5">
+  <h1 class="big-title">what we import & export</h1>
+  <div class="products">
+    <div class="product">
+      <div class="container">
+        <img src="img/spice.png" alt="Premium-quality of Indian Spices">
       </div>
+      <h1>Premium-quality of Indian Spices</h1>
+    </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/rice.png" alt="all kinds of Indian and Pakistani Rice">
+      </div>
+      <h1>all kinds of Indian and Pakistani Rice</h1>
+    </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/clothes.png" alt="High-quality of fabrics and clothes">
+      </div>
+      <h1>High-quality of fabrics and clothes</h1>
+    </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/shoses 1.png" alt="Multitude types of Shoes from India and Turkey">
+      </div>
+      <h1>Multitude types of Shoes from India and Turkey</h1>
+    </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/Timbers.png" alt="Import & Export of Timbers from India, China, and Turkey">
+      </div>
+      <h1>Import & Export of Timbers from India, China, and Turkey</h1>
+    </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/Steel.png" alt="Import of high-grade iron from China, India and Turkey">
+      </div>
+      <h1>Import of high-grade iron from China, India and Turkey</h1>
+    </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/oud1.png" alt="original Oud and various types of Perfumes ">
+      </div>
+      <h1>original Oud and various types of Perfumes </h1>
+    </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/Medical Equipment.png" alt="Import of all types of Medical Equipment">
+      </div>
+      <h1>Import of all types of Medical Equipment</h1>
+    </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/Construction Materials.png" alt="Import & Export of various Construction Materials">
+      </div>
+      <h1>Import & Export of various Construction Materials</h1>
+    </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/suger.png" alt="Import of fine-quality Brazilian Sugar">
+      </div>
+      <h1>Import of fine-quality Brazilian Sugar</h1>
+    </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/Corn and Wheat.png" alt="Import & Export of top-quality Brazilian Corn and Wheat">
+      </div>
+      <h1>Import & Export of top-quality Brazilian Corn and Wheat</h1>
+    </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/chicken.png" alt="Import & Export of Frozen Chicken from Brazil">
+      </div>
+      <h1>Import & Export of Frozen Chicken from Brazil</h1>
     </div>
   </div>
-  <div class="copy-rights">
-    <p>Copyright ©2022 Emad Rashad.<a href="http://emadrashad.com" target="_black"><img src="icons/copyright.svg" alt=""></a></p>
-  </div>
-</footer>
+</div>
 
+<!-- loading page --------------- -->
+<div class="loading-page">
+  <img src="icons/header logo.svg" alt="">
+</div>
+
+
+<!-- section-6---------------------- -->
+<div class="section-6" id="section_6">
+  <section>
+    <img src="img/flight.png" alt="flight">
+<div class="info">
+<h1>Why choose us?</h1>
+<ul>
+  <li>Access to more suppliers & businesses of various goods and commodities.</li>
+  <li>Save budget with us, while we provide you with high quality products.</li>
+  <li>Advantage of relatively lower costs of transportation.</li>
+  <li>Exceptional Support, our support staff are available all the time, as your questions/concerns are highly valued.</li>
+</ul>
+</div>
+    <img src="img/track.png" alt="ship">
+  </section>
+
+  <form action="https://formsubmit.co/global.onorva@gmail.com" method="POST">
+    <h1>you can order now</h1>
+    <label for="FreightT">Freight type:</label>
+    <select name="freight type" id="">
+      <option value="air freight">air freight</option>
+      <option value="sea freight">sea freight</option>
+      <option value="road freight">road freight</option>
+    </select>
+    <label for="Load weight">Load weight:</label>
+    <div class="short-input">
+      <input  type="text" name="Load weight" placeholder="for example 1000 kg">
+      <select name="Load weight ber" id="">
+        <option value="mg">mg</option>
+        <option value="g">g</option>
+        <option value="kg">kg</option>
+        <option value="t">t</option>
+        <option value="ib">ib</option>
+        <option value="oz">oz</option>
+      </select>
+    </div>
+    <label for="distance">distance:</label>
+    <div class="distance-div">
+      <input type="text" placeholder="from" name="from-distance" id="">
+      <input type="text" placeholder="to" name="to-distance" id="">
+    </div>
+    <label for="products category">products category:</label>
+    <select name="products category:" id="">
+      <option value="Food & Spices">Food & Spices</option>
+      <option value="Factory Equipment">Factory Equipment</option>
+      <option value="Accessories">Accessories</option>
+      <option value="Perfumes">Perfumes</option>
+      <option value="Clothes and Fabrics">Clothes and Fabrics</option>
+    </select>
+    <label for="product description">product description:</label>
+    <textarea name="product description:" placeholder="describe the product you want to order"></textarea>
+    <label for="product amount">product amount:</label>
+    <div class="product-amount-div">
+      <input type="text" name="product amount:" placeholder="for example 100 box">
+      <select name="product amount ber">
+        <option value="box">box</option>
+        <option value="bottle">bottle</option>
+        <option value="bag">bag</option>
+      </select>
+    </div>
+    <input type="text" name="name:" placeholder="Your Name">
+    <input type="email" name="email:" placeholder="Your Email">
+    <input type="text" name="phone no:" placeholder="Your Phone">
+    <button type="submit">submit now</button>
+  </form>
+</div>
+
+  
+
+
+<footer>
+  <img class="wave" src="icons/wave.svg" alt="svg">
+  <section>
+    <img src="icons/en&ar-logo.svg" alt="logo">
+    <ul>Contact us
+      <li>Call / +918886060299</li>
+      <li>Email / global.onorva@gmail.com</li>
+    </ul>
+    <ul>Follow us
+      <li><a href="https://www.facebook.com/profile.php?id=100079244114319" target="_black"><img src="icons/facebook.svg" alt="facebook">facebook</a></li>
+      <li><a href="https://instagram.com/onorva.global?utm_medium=copy_link" target="_black"><img src="icons/instagram.svg" alt="instagram">instagram</a></li>
+      <li><a href="https://wa.me/+918886060299" target="_black"><img src="icons/whatsapp.svg" alt="whatsapp">whatsapp</a></li>
+      <li><a href="mailto:global.onorva@gmail.com" type="email" target="_black"><img src="icons/email.svg" alt="email">email</a></li>
+    </ul>
+  </section>
+  <div class="copy-rights">
+    <p>Copyright ©2022 <a href="http://emadrashad.com" target="_black">Emad Rashad.</a></p>
+  </div> 
+</footer>
   <script src="javascript/main.js"></script>
   <script src="javascript/translate.js"></script>
 </body>
-</html>
+</html> 
