--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <!-- section-1------------- -->
 <div class="section-1" id="section_1">
-  <video src="img/My Video.mp4" autoplay muted loop></video>
+  <video src="img/My Video 3.mp4" autoplay muted loop></video>
   <section>
     <img src="icons/en&ar-logo.svg" alt="logo">
     <h1>import and export to Yemen, <br> all Gulf countries and east Africa</h1>
@@ -144,7 +144,7 @@
     </div>
     <div class="product">
       <div class="container">
-        <img src="img/shoses 1.png" alt="Multitude types of Shoes from India and Turkey">
+        <img src="img/shoses 2.png" alt="Multitude types of Shoes from India and Turkey">
       </div>
       <h1>Multitude types of Shoes from India and Turkey</h1>
     </div>
@@ -294,6 +294,7 @@
     <p>Copyright ©2022 <a href="http://emadrashad.com" target="_black">Emad Rashad.</a></p>
   </div> 
 </footer>
+<div class="space"></div>
   <script src="javascript/main.js"></script>
   <script src="javascript/translate.js"></script>
 </body>
