--- a/index.html
+++ b/index.html
@@ -220,8 +220,7 @@
 </div>
     <img src="img/track.png" alt="ship">
   </section>
-
-  <form action="https://formsubmit.co/global.onorva@gmail.com" method="POST">
+  <form action="https://formsubmit.co/global.onorva@gmail.com" method="POST" enctype="multipart/form-data">
     <input type="hidden" name="_template" value="table">
     <input type="hidden" name="_autoresponse" value="Thank you for trusting us and we will reply to you as soon as possible">
     <h1>you can order now</h1>
@@ -267,6 +266,8 @@
         <option value="bag">bag</option>
       </select>
     </div>
+    <label for="attachment">you can upload pictures of the product you want</label>
+    <input type="file" name="attachment" accept="image/png, image/jpeg">
     <input type="text" name="name" placeholder="Your Name" required>
     <input type="email" name="email" placeholder="Your Email" required>
     <input type="text" name="phone no" placeholder="Your Phone" required>
