add new prodects

--- a/index.html
+++ b/index.html
@@ -196,6 +196,25 @@
       </div>
       <h1>Import & Export of Frozen Chicken from Brazil</h1>
     </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/vape.png" alt="Import & Export of vaping cigarette from China">
+      </div>
+      <h1>Import & Export of vaping cigarette from China</h1>
+    </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/kid clothes.png" alt="Import & Export of kids clothes from China">
+      </div>
+      <h1>Import & Export of kids clothes from China</h1>
+    </div>
+    <div class="product">
+      <div class="container">
+        <img src="img/kid shoes.png" alt="Import & Export of kids shoes from China">
+      </div>
+      <h1>Import & Export of kids shoes from China</h1>
+    </div>
+
   </div>
 </div>
 
