--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
 </div>
 
 <!-- loading page --------------- -->
-<div class="loading-page">
+<!-- <div class="loading-page">
   <img src="icons/header logo.svg" alt="">
-</div>
+</div> -->
 
 
 <!-- section-6---------------------- -->
